--- a/Tutorien/Tutorium 01.06.ipynb
+++ b/Tutorien/Tutorium 01.06.ipynb
@@ -12,6 +12,18 @@
   {
    "cell_type": "markdown",
    "source": [
+    "- biochemische Daten für pca testing nehmen da darin hohe varianz besteht\n",
+    "- --> er rät uns ja aber eher ab davon ne PCA zu machen\n",
+    "- mit Scikit lean rumspielen, um etwas zu lernen\n",
+    "- hierarchisches clustern -> seaborn / scikit lean"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Präsentation der Arbeit"
    ],
    "metadata": {
@@ -29,19 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import functions as func\n",
     "import data_cleanup as dc\n",
-    "import data_exploration as de"
+    "import data_exploration as de\n",
+    "import seaborn as sns\n",
+    "import sklearn"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-01T12:24:29.986061400Z",
-     "start_time": "2023-06-01T12:24:26.842036Z"
+     "end_time": "2023-06-01T13:21:24.647852100Z",
+     "start_time": "2023-06-01T13:21:24.580311800Z"
     }
    }
   },
@@ -107,28 +121,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "outputs": [
     {
-     "data": {
-      "text/plain": "AS_new         A         C         D         E         F         G         H   \nAS_old                                                                         \nA            NaN -0.066199 -0.161789 -0.172588 -0.131951 -0.147534 -0.135050  \\\nC      -0.379058       NaN -0.648670 -0.664530 -0.455798 -0.588880 -0.572389   \nD      -0.176494 -0.081904       NaN -0.215169 -0.157390 -0.209942 -0.163320   \nE      -0.182059 -0.151769 -0.185226       NaN -0.158233 -0.222204 -0.139448   \nF      -0.232938 -0.252479 -0.202543 -0.256478       NaN -0.217340 -0.157665   \n\nAS_new         I         K         L         M         N         P         Q   \nAS_old                                                                         \nA      -0.130782 -0.050620 -0.137275 -0.078216 -0.085350 -0.182924 -0.087901  \\\nC      -0.544355 -0.569950 -0.462519 -0.523903 -0.600005 -0.686801 -0.610988   \nD      -0.117886 -0.182459 -0.123111 -0.130926 -0.237041 -0.195610 -0.137874   \nE      -0.167060 -0.290667 -0.168667 -0.158077 -0.169334 -0.189913 -0.158573   \nF      -0.263739 -0.191597 -0.246834 -0.186162 -0.233865 -0.213441 -0.138517   \n\nAS_new         R         S         T         V         W         Y  \nAS_old                                                              \nA      -0.111466 -0.169750 -0.215212 -0.201422 -0.134244 -0.125871  \nC      -0.528291 -0.424970 -0.467614 -0.481674 -0.566497 -0.550765  \nD      -0.173814 -0.114984 -0.112868 -0.170979 -0.102504 -0.238209  \nE      -0.190111 -0.130130 -0.128753 -0.210387 -0.208934 -0.169799  \nF      -0.201313 -0.278673 -0.228582 -0.218456 -0.180306 -0.196505  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>AS_new</th>\n      <th>A</th>\n      <th>C</th>\n      <th>D</th>\n      <th>E</th>\n      <th>F</th>\n      <th>G</th>\n      <th>H</th>\n      <th>I</th>\n      <th>K</th>\n      <th>L</th>\n      <th>M</th>\n      <th>N</th>\n      <th>P</th>\n      <th>Q</th>\n      <th>R</th>\n      <th>S</th>\n      <th>T</th>\n      <th>V</th>\n      <th>W</th>\n      <th>Y</th>\n    </tr>\n    <tr>\n      <th>AS_old</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>NaN</td>\n      <td>-0.066199</td>\n      <td>-0.161789</td>\n      <td>-0.172588</td>\n      <td>-0.131951</td>\n      <td>-0.147534</td>\n      <td>-0.135050</td>\n      <td>-0.130782</td>\n      <td>-0.050620</td>\n      <td>-0.137275</td>\n      <td>-0.078216</td>\n      <td>-0.085350</td>\n      <td>-0.182924</td>\n      <td>-0.087901</td>\n      <td>-0.111466</td>\n      <td>-0.169750</td>\n      <td>-0.215212</td>\n      <td>-0.201422</td>\n      <td>-0.134244</td>\n      <td>-0.125871</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>-0.379058</td>\n      <td>NaN</td>\n      <td>-0.648670</td>\n      <td>-0.664530</td>\n      <td>-0.455798</td>\n      <td>-0.588880</td>\n      <td>-0.572389</td>\n      <td>-0.544355</td>\n      <td>-0.569950</td>\n      <td>-0.462519</td>\n      <td>-0.523903</td>\n      <td>-0.600005</td>\n      <td>-0.686801</td>\n      <td>-0.610988</td>\n      <td>-0.528291</td>\n      <td>-0.424970</td>\n      <td>-0.467614</td>\n      <td>-0.481674</td>\n      <td>-0.566497</td>\n      <td>-0.550765</td>\n    </tr>\n    <tr>\n      <th>D</th>\n      <td>-0.176494</td>\n      <td>-0.081904</td>\n      <td>NaN</td>\n      <td>-0.215169</td>\n      <td>-0.157390</td>\n      <td>-0.209942</td>\n      <td>-0.163320</td>\n      <td>-0.117886</td>\n      <td>-0.182459</td>\n      <td>-0.123111</td>\n      <td>-0.130926</td>\n      <td>-0.237041</td>\n      <td>-0.195610</td>\n      <td>-0.137874</td>\n      <td>-0.173814</td>\n      <td>-0.114984</td>\n      <td>-0.112868</td>\n      <td>-0.170979</td>\n      <td>-0.102504</td>\n      <td>-0.238209</td>\n    </tr>\n    <tr>\n      <th>E</th>\n      <td>-0.182059</td>\n      <td>-0.151769</td>\n      <td>-0.185226</td>\n      <td>NaN</td>\n      <td>-0.158233</td>\n      <td>-0.222204</td>\n      <td>-0.139448</td>\n      <td>-0.167060</td>\n      <td>-0.290667</td>\n      <td>-0.168667</td>\n      <td>-0.158077</td>\n      <td>-0.169334</td>\n      <td>-0.189913</td>\n      <td>-0.158573</td>\n      <td>-0.190111</td>\n      <td>-0.130130</td>\n      <td>-0.128753</td>\n      <td>-0.210387</td>\n      <td>-0.208934</td>\n      <td>-0.169799</td>\n    </tr>\n    <tr>\n      <th>F</th>\n      <td>-0.232938</td>\n      <td>-0.252479</td>\n      <td>-0.202543</td>\n      <td>-0.256478</td>\n      <td>NaN</td>\n      <td>-0.217340</td>\n      <td>-0.157665</td>\n      <td>-0.263739</td>\n      <td>-0.191597</td>\n      <td>-0.246834</td>\n      <td>-0.186162</td>\n      <td>-0.233865</td>\n      <td>-0.213441</td>\n      <td>-0.138517</td>\n      <td>-0.201313</td>\n      <td>-0.278673</td>\n      <td>-0.228582</td>\n      <td>-0.218456</td>\n      <td>-0.180306</td>\n      <td>-0.196505</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "clustermap requires scipy to be available",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[17], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m gia_nut_distance \u001B[38;5;241m=\u001B[39m de\u001B[38;5;241m.\u001B[39mdistance_matrix(gia_nut_wt_norm)\n\u001B[1;32m----> 2\u001B[0m \u001B[43msns\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mclustermap\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgia_nut_distance\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\Documents\\Uni\\SS_2023\\Bioinfo\\Projekt\\venv\\lib\\site-packages\\seaborn\\matrix.py:1250\u001B[0m, in \u001B[0;36mclustermap\u001B[1;34m(data, pivot_kws, method, metric, z_score, standard_scale, figsize, cbar_kws, row_cluster, col_cluster, row_linkage, col_linkage, row_colors, col_colors, mask, dendrogram_ratio, colors_ratio, cbar_pos, tree_kws, **kwargs)\u001B[0m\n\u001B[0;32m   1157\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m   1158\u001B[0m \u001B[38;5;124;03mPlot a matrix dataset as a hierarchically-clustered heatmap.\u001B[39;00m\n\u001B[0;32m   1159\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m   1247\u001B[0m \n\u001B[0;32m   1248\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m   1249\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m _no_scipy:\n\u001B[1;32m-> 1250\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mclustermap requires scipy to be available\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m   1252\u001B[0m plotter \u001B[38;5;241m=\u001B[39m ClusterGrid(data, pivot_kws\u001B[38;5;241m=\u001B[39mpivot_kws, figsize\u001B[38;5;241m=\u001B[39mfigsize,\n\u001B[0;32m   1253\u001B[0m                       row_colors\u001B[38;5;241m=\u001B[39mrow_colors, col_colors\u001B[38;5;241m=\u001B[39mcol_colors,\n\u001B[0;32m   1254\u001B[0m                       z_score\u001B[38;5;241m=\u001B[39mz_score, standard_scale\u001B[38;5;241m=\u001B[39mstandard_scale,\n\u001B[0;32m   1255\u001B[0m                       mask\u001B[38;5;241m=\u001B[39mmask, dendrogram_ratio\u001B[38;5;241m=\u001B[39mdendrogram_ratio,\n\u001B[0;32m   1256\u001B[0m                       colors_ratio\u001B[38;5;241m=\u001B[39mcolors_ratio, cbar_pos\u001B[38;5;241m=\u001B[39mcbar_pos)\n\u001B[0;32m   1258\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m plotter\u001B[38;5;241m.\u001B[39mplot(metric\u001B[38;5;241m=\u001B[39mmetric, method\u001B[38;5;241m=\u001B[39mmethod,\n\u001B[0;32m   1259\u001B[0m                     colorbar_kws\u001B[38;5;241m=\u001B[39mcbar_kws,\n\u001B[0;32m   1260\u001B[0m                     row_cluster\u001B[38;5;241m=\u001B[39mrow_cluster, col_cluster\u001B[38;5;241m=\u001B[39mcol_cluster,\n\u001B[0;32m   1261\u001B[0m                     row_linkage\u001B[38;5;241m=\u001B[39mrow_linkage, col_linkage\u001B[38;5;241m=\u001B[39mcol_linkage,\n\u001B[0;32m   1262\u001B[0m                     tree_kws\u001B[38;5;241m=\u001B[39mtree_kws, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
+      "\u001B[1;31mRuntimeError\u001B[0m: clustermap requires scipy to be available"
+     ]
     }
    ],
    "source": [
     "gia_nut_distance = de.distance_matrix(gia_nut_wt_norm)\n",
-    "\n",
-    "gia_nut_distance.head(5)"
+    "sns.clustermap(gia_nut_distance)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-01T12:40:19.450725500Z",
-     "start_time": "2023-06-01T12:40:19.312127600Z"
+     "end_time": "2023-06-01T13:22:00.916128200Z",
+     "start_time": "2023-06-01T13:21:58.292130800Z"
     }
    }
   },
