angedachte Struktur, in der ihr bitte eure Sachen hochladet :)

--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -11,6 +11,49 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import data_exploration as de\n",
+    "import data_cleanup as dc\n",
+    "\n",
+    "import scipy.stats as stats\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "from sklearn.cluster import AgglomerativeClustering"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-15T11:45:53.101120Z",
+     "start_time": "2023-06-15T11:45:53.089141Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "# Die Datensätze, die wir verwenden:\n",
+    "gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
+    "gia_null_nut: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Nutlin_2018.csv')\n",
+    "gia_wt_nut: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_WT_Nutlin_2018.csv')\n",
+    "kot_hum: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Kotler_2018.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-15T11:38:46.249096300Z",
+     "start_time": "2023-06-15T11:38:46.006420Z"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## Grobe Struktur:\n",
@@ -47,7 +90,27 @@
    "cell_type": "markdown",
    "source": [
     "Frido:\n",
-    "Datensatz in handlicheres Format bringen mit df_transform:\n",
+    "Nachdem wir das Cleaning der Daten abgeschlossen haben, brachten wir den Datensatz in ein handlicheres Format."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3992118133.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;36m  Cell \u001B[1;32mIn[1], line 1\u001B[1;36m\u001B[0m\n\u001B[1;33m    df_transform:\u001B[0m\n\u001B[1;37m                 ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_transform:\n",
     "\n",
     "def df_transform(frame: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"df wird in Format WT_Sequenz-Mutierte_AS umgewandelt\"\"\"\n",
@@ -55,11 +118,41 @@
     "    frame['AS_old'] = frame.mutant.str.get(0)\n",
     "    frame['AS_new'] = frame.mutant.str.get(-1)\n",
     "    pivoted_frame = frame.pivot(index='AS_new', columns=['position_mut', 'AS_old'], values='DMS_score')\n",
-    "    return pivoted_frame\n",
+    "    return pivoted_frame"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-15T11:36:34.599312500Z",
+     "start_time": "2023-06-15T11:36:34.583614600Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "DF ist dadurch so angeordnet, dass die obere Zeile die WT-Seq. angibt und dann in den Spalten jeweils die DMS-Scores an der Position für die Mutationen mit den verschiedenen Basen stehen.\n",
     "-> Sorgt für NA an den Stellen, bei denen kein Austausch durchgeführt wurde\n",
-    "Sorgt dafür, dass wir nachfolgende Berechnungen und Analysen einfacher mit dem Datensatz durchführen können.\n",
-    "\n",
+    "Sorgt dafür, dass wir nachfolgende Berechnungen und Analysen einfacher mit dem Datensatz durchführen können."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1735712193.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;36m  Cell \u001B[1;32mIn[4], line 1\u001B[1;36m\u001B[0m\n\u001B[1;33m    na_remove Funktion\u001B[0m\n\u001B[1;37m              ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
     "na_remove Funktion\n",
     "def rmv_na(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Ändert die Werte eines df von NaN zu 0, wenn mutierte AS der WT AS entspricht\"\"\"\n",
@@ -73,8 +166,19 @@
     "            if letters_row == letters_col and pd.isna(df.loc[row, col]):\n",
     "                df.loc[row, col] = 0\n",
     "\n",
-    "    return df\n",
-    "\n",
+    "    return df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-15T11:40:27.356398600Z",
+     "start_time": "2023-06-15T11:40:27.300420Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "-> Entfernt die NA bei denen der Austausch nicht durchgeführt wurde, weil die AS der ursprünglichen AS entsprechen würde und ersetzt sie mit Null, da keine Veränderung in der Fitness zu erwarten"
    ],
    "metadata": {
@@ -110,10 +214,11 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "Frido:\n",
-    "### Bearbeiten des AS-Datensatz\n",
+    "#Bearbeiten des AS-Datensatz\n",
     "aa = pd.read_csv('../DMS_data/aminoacids.csv')\n",
     "\n",
     "#Entfernen von Hydroxyproline und Pyroglutamat\n",
@@ -132,9 +237,27 @@
     "aa_distances = euclidean_distances(aa_zscore.values)\n",
     "\n",
     "#Umwandeln zurück in einen DF zur besseren Übersicht\n",
-    "aa_df = pd.DataFrame(aa_distances, index=aa_nat[labels_column], columns=aa_nat[labels_column])\n",
-    "\n",
-    "### Distanzmatrix (DMS-Scores) -> Vllt. erklärst du vorher noch die Mean-Geschichte @Enno\n",
+    "aa_df = pd.DataFrame(aa_distances, index=aa_nat[labels_column], columns=aa_nat[labels_column])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ennos Teil zu den Mittelwerten für die Substiutionen:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Distanzmatrix (DMS-Scores)\n",
     "\n",
     "from sklearn.metrics.pairwise import euclidean_distances\n",
     "\n",
@@ -151,9 +274,16 @@
     "dms_distances_df = pd.DataFrame(dms_distances, index=mean_substitutions_t.index, columns=mean_substitutions_t.index)\n",
     "\n",
     "# Print the first 20 rows of mean_substitutions\n",
-    "dms_distances_df.head(20)\n",
-    "\n",
-    "-> Gibt uns die Abstände der AS zueinander basierend  auf den DMS-Scores bei Austausch von AS. Bin mir leider nicht sicher ob die Abstände der neuen oder alten AS zueinander berechnet werden. Und check auch nicht ganz wieso das nur mit der transponierten Matrix funktioniert\n"
+    "dms_distances_df.head(20)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "-> Gibt uns die Abstände der AS zueinander basierend auf den DMS-Scores bei Austausch von AS. Bin mir leider nicht sicher ob die Abstände der neuen oder alten AS zueinander berechnet werden. Und check auch nicht ganz wieso das nur mit der transponierten Matrix funktioniert"
    ],
    "metadata": {
     "collapsed": false
