--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -124,7 +124,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "With this transformed data set, further analyses are more easily to perfom."
+    "With this transformed data set, further analyses are more easily to perform."
    ],
    "metadata": {
     "collapsed": false
