Update P53 - DMS Documentation.ipynb

--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -229,7 +229,51 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Dario:"
+    "Dario: My goal was to retrieve informations regarding the comparability "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fun.hmap(gia_null_eto_mmn_auf)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fun.hmap(gia_wt_nut_mmn_auf)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fun.hmap(gia_null_nut_mmn_auf)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fun.hmap(kot_hum_mmn_auf)"
    ],
    "metadata": {
     "collapsed": false
