--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -27,13 +27,91 @@
     "from sklearn.cluster import AgglomerativeClustering"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-17T13:43:49.481040Z",
+     "start_time": "2023-06-17T13:43:49.470507Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "outputs": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           Sum\n",
+      "position_mut AS_old           \n",
+      "280          R      -33.450339\n",
+      "281          D      -33.446227\n",
+      "278          P      -32.028606\n",
+      "205          Y      -31.805002\n",
+      "275          C      -31.252744\n",
+      "                           Sum\n",
+      "position_mut AS_old           \n",
+      "280          R      -33.450339\n",
+      "281          D      -33.446227\n",
+      "278          P      -32.028606\n",
+      "205          Y      -31.805002\n",
+      "275          C      -31.252744\n",
+      "                           Sum\n",
+      "position_mut AS_old           \n",
+      "205          Y      -27.798457\n",
+      "278          P      -27.467959\n",
+      "132          K      -27.446469\n",
+      "238          C      -26.371507\n",
+      "143          V      -25.140772\n",
+      "                           Sum\n",
+      "position_mut AS_old           \n",
+      "205          Y      -27.798457\n",
+      "278          P      -27.467959\n",
+      "132          K      -27.446469\n",
+      "238          C      -26.371507\n",
+      "143          V      -25.140772\n",
+      "                           Sum\n",
+      "position_mut AS_old           \n",
+      "245          G      -41.124490\n",
+      "249          R      -39.537161\n",
+      "179          H      -37.730973\n",
+      "278          P      -37.679146\n",
+      "176          C      -37.650754\n",
+      "                           Sum\n",
+      "position_mut AS_old           \n",
+      "245          G      -41.124490\n",
+      "249          R      -39.537161\n",
+      "179          H      -37.730973\n",
+      "278          P      -37.679146\n",
+      "176          C      -37.650754\n",
+      "                          Sum\n",
+      "position_mut AS_old          \n",
+      "245          G      -4.352254\n",
+      "273          R      -1.998387\n",
+      "132          K      -1.894587\n",
+      "179          H      -1.892910\n",
+      "249          R      -1.866202\n",
+      "                          Sum\n",
+      "position_mut AS_old          \n",
+      "245          G      -4.352254\n",
+      "273          R      -1.998387\n",
+      "132          K      -1.894587\n",
+      "179          H      -1.892910\n",
+      "249          R      -1.866202\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[12], line 33\u001B[0m\n\u001B[1;32m     29\u001B[0m KLLV \u001B[38;5;241m=\u001B[39m dc\u001B[38;5;241m.\u001B[39mlow_val(kot_hum, \u001B[38;5;241m5\u001B[39m)\n\u001B[1;32m     30\u001B[0m KSLV \u001B[38;5;241m=\u001B[39m dc\u001B[38;5;241m.\u001B[39mlow_val(kot_hum, \u001B[38;5;241m5\u001B[39m)\n\u001B[0;32m---> 33\u001B[0m GNEL: pd\u001B[38;5;241m.\u001B[39mDataframe \u001B[38;5;241m=\u001B[39m \u001B[43mGNELLV\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mposition_mut\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[1;32m     34\u001B[0m GNES: pd\u001B[38;5;241m.\u001B[39mDataframe\u001B[38;5;241m=\u001B[39m GNESLV[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSum\u001B[39m\u001B[38;5;124m'\u001B[39m]\n\u001B[1;32m     35\u001B[0m GNNL: pd\u001B[38;5;241m.\u001B[39mDataframe \u001B[38;5;241m=\u001B[39m GNNLLV[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mposition_mut\u001B[39m\u001B[38;5;124m'\u001B[39m]\n",
+      "\u001B[0;31mTypeError\u001B[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "# All used data sets\n",
     "gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
@@ -91,7 +169,49 @@
     "aa = pd.read_csv('../DMS_data/aminoacids.csv')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-17T13:49:00.045479Z",
+     "start_time": "2023-06-17T13:48:59.593438Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           Sum\n",
+      "position_mut AS_old           \n",
+      "280          R      -33.450339\n",
+      "281          D      -33.446227\n",
+      "278          P      -32.028606\n",
+      "205          Y      -31.805002\n",
+      "275          C      -31.252744\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[11], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m abc: pd\u001B[38;5;241m.\u001B[39mDataFrame \u001B[38;5;241m=\u001B[39m dc\u001B[38;5;241m.\u001B[39mlow_val(gia_null_eto,\u001B[38;5;241m5\u001B[39m)\n\u001B[0;32m----> 2\u001B[0m \u001B[43mabc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhead\u001B[49m(\u001B[38;5;241m29\u001B[39m)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'head'"
+     ]
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-17T13:46:16.276482Z",
+     "start_time": "2023-06-17T13:46:16.222431Z"
+    }
    }
   },
   {
