added function in codon.py to generate dict with all probabilities for single mutated AMS exchanges.

--- a/Testing/Frido_Test_Codons.ipynb
+++ b/Testing/Frido_Test_Codons.ipynb
@@ -218,13 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "outputs": [
     {
      "data": {
-      "text/plain": "4\nQ    0.2\nH    0.2\nK    0.1\n*    0.1\nE    0.1\nL    0.1\nR    0.1\nP    0.1\nName: proportion, dtype: float64"
+      "text/plain": "3\nP    0.4\nT    0.1\nS    0.1\nA    0.1\nQ    0.1\nL    0.1\nR    0.1\nName: proportion, dtype: float64"
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,22 +243,21 @@
     "#         print(aa.loc[position])\n",
     "#         var = [var, bb[var]]\n",
     "\n",
-    "def prob_as_position(position: int) -> pd.Series:\n",
+    "def prob_as_position(position: int, variation_matrix: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Function returning the probability for each AMS, resulting from a single mutation in the codon as pd.Series\"\"\"\n",
-    "    variation_matrix: pd.DataFrame = translate_codons_df(mutated_p53).astype(str)\n",
     "\n",
     "    res: pd.DataFrame = variation_matrix.loc[position].value_counts(normalize=True)\n",
     "\n",
     "    return res\n",
     "\n",
     "# -> das sollte idealerweise irgendwie über alle zeilen angewandt werden und dann zusammengeschrieben werden. daran hänge ich gerade etwas.\n",
-    "\n"
+    "prob_as_position(3, translate_codons_df(mutated_p53).astype(str))\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:53:29.263078200Z",
-     "start_time": "2023-06-19T13:53:29.027394600Z"
+     "end_time": "2023-06-19T16:25:36.228191900Z",
+     "start_time": "2023-06-19T16:25:35.826764800Z"
     }
    }
   },
