neue mean funktion gefixed (hoffentlich)

--- a/Testing/Dario_Test_Visualisierung.ipynb
+++ b/Testing/Dario_Test_Visualisierung.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-20T17:36:19.378736Z",
-     "start_time": "2023-06-20T17:36:18.875879Z"
+     "end_time": "2023-06-20T18:32:45.556520Z",
+     "start_time": "2023-06-20T18:32:44.177501Z"
     }
    },
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "gia_null_eto: pd.DataFrame = bac.gia_null_eto"
@@ -30,8 +30,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T17:37:52.030329Z",
-     "start_time": "2023-06-20T17:37:52.026719Z"
+     "end_time": "2023-06-20T18:32:47.402031Z",
+     "start_time": "2023-06-20T18:32:47.386572Z"
     }
    }
   },
@@ -166,15 +166,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "def low_val(df: pd.DataFrame, num_low: int) -> pd.DataFrame:\n",
-    "    \"\"\"Zeigt die x niedrigsten Werte eines Datensatzes an\"\"\"\n",
-    "    df_dft = df_transform(df)\n",
-    "    df_dft_narm = rmv_na(df_dft)\n",
-    "    sum_df = pd.DataFrame(df_dft_narm.sum(), columns=['Sum'])\n",
-    "    lowest_values = sum_df.nsmallest(num_low, \"Sum\")\n",
-    "    return lowest_values"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -182,6 +174,40 @@
      "end_time": "2023-06-20T18:11:42.631916Z",
      "start_time": "2023-06-20T18:11:42.618896Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "position_mut  1    2    3    4    5    6    7    8    9    10   ...  384  385   \nAS_old          M    E    E    P    Q    S    D    P    S    V  ...    M    F   \n0             NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  ...  NaN  NaN  \\\n\nposition_mut  386  387  388  389  390  391  392  393  \nAS_old          K    T    E    G    P    D    S    D  \n0             NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n\n[1 rows x 393 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th>position_mut</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>10</th>\n      <th>...</th>\n      <th>384</th>\n      <th>385</th>\n      <th>386</th>\n      <th>387</th>\n      <th>388</th>\n      <th>389</th>\n      <th>390</th>\n      <th>391</th>\n      <th>392</th>\n      <th>393</th>\n    </tr>\n    <tr>\n      <th>AS_old</th>\n      <th>M</th>\n      <th>E</th>\n      <th>E</th>\n      <th>P</th>\n      <th>Q</th>\n      <th>S</th>\n      <th>D</th>\n      <th>P</th>\n      <th>S</th>\n      <th>V</th>\n      <th>...</th>\n      <th>M</th>\n      <th>F</th>\n      <th>K</th>\n      <th>T</th>\n      <th>E</th>\n      <th>G</th>\n      <th>P</th>\n      <th>D</th>\n      <th>S</th>\n      <th>D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>1 rows × 393 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun.df_mean(gia_null_eto)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-20T18:32:52.121118Z",
+     "start_time": "2023-06-20T18:32:52.031590Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
